added slider style.

--- a/IDPSliderExample/Base.lproj/Main.storyboard
+++ b/IDPSliderExample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -20,6 +20,14 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="1jQ-y7-vOH"/>
                                 </connections>
                             </view>
+                            <view opaque="NO" contentMode="scaleToFill" id="iks-5Q-TLd" customClass="IDPSlider">
+                                <rect key="frame" x="15" y="333" width="290" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="hgQ-Yt-XMq"/>
+                                </connections>
+                            </view>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.25" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="inU-Nq-bEG">
                                 <rect key="frame" x="55" y="165" width="210" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -32,6 +40,7 @@
                     <connections>
                         <outlet property="_labelValue" destination="inU-Nq-bEG" id="T8N-z7-bZW"/>
                         <outlet property="_slider" destination="HPq-0D-jAj" id="Ao5-SE-2qJ"/>
+                        <outlet property="_sliderSlim" destination="iks-5Q-TLd" id="8Pr-75-yPV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
